<resources>
    <string name="app_name">EngineerToolbox</string>
    <string name="acting_force_text">Действующее усилие (F), кН:</string>
    <string name="alu_pipe_weight_text">Масса алюминиевой трубы</string>
    <string name="calc_btn_name">Рассчитать</string>
    <string name="cooler_btn_name">Водяное охлаждение</string>
    <string name="ext_dia_text">Наружный диаметр трубы (D), мм:</string>
    <string name="eye_strngth_btn_name">Прочность проушины</string>
    <string name="heat_pow_text">Тепловая мощность (Q), кВт:</string>
    <string name="hyd_pipes_btn_name">Гидравлические трубы</string>
    <string name="hydrocyl_btn_name">Гидроцилиндр</string>
    <string name="in_temp_text">Температура воды\nна входе (T<sub><small>in</small></sub>), °С:</string>
    <string name="out_temp_text">Температура воды\nна выходе (T<sub><small>out</small></sub>), °С:</string>
    <string name="pipe_height_text">Высота сечения (H), мм:</string>
    <string name="pipe_length_text">Длина трубы (L), мм:</string>
    <string name="pipe_strngth_btn_name">Масса и прочность круглой трубы на изгиб</string>
    <string name="pipe_width_text">Ширина сечения (B), мм:</string>
    <string name="rpipe_strngth_btn_name">Масса и прочность прямоугольной трубы на изгиб</string>
    <string name="shaft_strngth_btn_name">Прочность оси</string>
    <string name="steel_pipe_weight_text">Масса стальной трубы</string>
    <string name="total_stress_text">Приведённые напряжения</string>
    <string name="vert_force_text">Действующее усилие в вертикальном направлении (F), кН:</string>
    <string name="w_rate_text">Расход воды</string>
    <string name="wall_thickness_text">Толщина стенки трубы (s), мм:</string>
    <string name="winch_btn_name">Лебёдка</string>
    <string name="wire_dia_text">Диаметр троса (D), мм:</string>
    <string name="wire_length_text">Длина троса (L), м:</string>
    <string name="drum_dia_text">Диаметр барабана (D), мм:</string>
    <string name="lay_number_text">Количество слоёв троса (n):</string>
    <string name="wire_speed_fl_text">Скорость выбирания троса\nна первом слое (V<sub><small>1</small></sub>), м/мин:</string>
    <string name="pull_force_fl_text">Тяговое усилие\nна первом слое (F<sub><small>1</small></sub>), кН:</string>
    <string name="full_drum_dia_text">Диаметр барабана с тросом</string>
    <string name="drum_length_text">Длина барабана</string>
    <string name="pull_force_ll_text">Тяговое усилие на последнем слое</string>
    <string name="wire_speed_ll_text">Скорость выбирания троса\nна последнем слое</string>
    <string name="mech_pow_text">Механическая мощность</string>
    <string name="torque_text">Крутящий момент</string>
    <string name="effective_force_text">Эффективное тяговое усилие на первом слое (с учётом веса троса в воде)</string>
</resources>
