<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
>

            <TextView
                android:id="@+id/textHei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pipe_height_text"
                android:textSize="18sp"
 />


            <EditText
                android:id="@+id/editHei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textBre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pipe_width_text"
                android:textSize="18sp"
 />

            <EditText
                android:id="@+id/editBre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textThickness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/wall_thickness_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editThickness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pipe_length_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textForce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/vert_force_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editForce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="4"
                android:hint="0"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btnCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/calc_btn_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textResultMassS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="2"
                android:text="@string/steel_pipe_weight_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textResultMassA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="2"
                android:text="@string/alu_pipe_weight_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textResultStress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lines="4"
                android:text="@string/total_stress_text"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>


